<resources>
    <string name="app_name">TWCallDeviceDemo</string>
    <string name="title_activity_duplex_video">Duplex Video</string>
    <string name="title_activity_twe_call">twe call demo</string>


    <string name="title_ipc">IPC</string>
    <string name="title_audio_video_call">音视频传输</string>
    <string name="title_custom_audio_video_call">接听音视频传输</string>
    <string name="title_tweCall">TWe Call</string>
    <string name="title_twe_call_lib_demo">TWE CALL LIB DEMO</string>
    <string name="title_setting_device">配置设备</string>
    <string name="title_call_device">设备呼设备</string>
    <string name="model_id">Model ID</string>
    <string name="sn">SN</string>
    <string name="sn_ticket">SN Ticket</string>
    <string name="wx_app_id">AppID(小程序ID)</string>

    <string name="twe_call_login">LOGIN</string>
    <string name="twe_call_wx_setting">WX SETTING</string>
    <string name="twe_call_quality_setting">画质设置</string>
    <string name="twe_call_openid">请输入Openid</string>

    <string name="product_id">请输入Product ID</string>
    <string name="device_name">请输入Device Name</string>
    <string name="device_pwd">请输入Device Key</string>
    <string name="device_xp2pinfo">请输入xp2pInfo</string>
    <string name="conform">确定</string>

    <string name="twe_call_video_call">视频通话</string>
    <string name="twe_call_audio_call">音频通话</string>
    <string name="twe_talk_ai">AI地址查询</string>
    <string name="twe_call_hangup">挂断</string>
    <string name="twe_call_busy">占线</string>
    <string name="twe_call_answer">接听</string>

    <string name="wx_voip_incoming_call">来电</string>
    <string name="wx_voip_hangup">已挂断</string>
    <string name="wx_voip_refuse">已拒接</string>
    <string name="wx_voip_busy">返回占线</string>
    <string name="wx_voip_timeout">已超时</string>
    <string name="wx_voip_peer_hangup">对方挂断</string>
    <string name="wx_voip_peer_cancel">对方取消</string>

    <string name="local_resolution">请选择本地分辨率</string>
    <string name="local_frame_rate">请选择本地帧率</string>
    <string name="local_frame_rate_tip">0fps</string>
    <string name="local_bit_rate">请选择本地码率</string>
    <string name="local_bit_rate_tip">0kbps</string>
    <string name="wx_resolution">请选择要拉取小程序的分辨率</string>
    <string name="wx_camera_setting">请选择视频通话默认小程序端摄像头开关</string>
    <string name="tip_text">温馨提示：首次进入请点击配置设备按钮配置必要参数!</string>
    <string name="subtitle_text">欢迎使用腾讯云 IoT Device Video Demo</string>
    <string name="title_text">IoT Device Video Demo</string>
    <string name="wx_setting_text">WX SETTING</string>
    <string name="quality_setting_text">画质设置</string>
    <string name="setting">设置</string>
    <string name="title_ota_upgrade">OTA升级</string>
    <string name="text_device_info_label">设备信息</string>
    <string name="text_device_info">设备信息：%s</string>
    <string name="text_p2p_info">P2P信息:%s</string>
    <string name="text_exit_ota">OTA退出升级</string>
    <string name="text_select_version">请选择下面通信的小程序版本</string>
    <string name="text_active_type">请选择激活类型</string>
    <string name="text_active_type_tip">注：若出现过期情况，请按照控制台\n选择激活类型</string>
    <string name="text_formal_version">正式版</string>
    <string name="text_develop_version">开发版</string>
    <string name="text_experience_version">体验版</string>
    <string name="title_twe_call_login">Twe Call Login</string>
    <string name="text_fps">%d fps</string>
    <string name="text_kbps">%d kbps</string>
    <string name="text_video_link">视频链路</string>
    <string name="text_one_way">单向：设备向小程序/APP传输视频</string>
    <string name="text_two_way">双向：设备与小程序/APP双向传输视频</string>
    <string name="text_three_way">呼叫接听双向：设备与小程序/APP双向传输视频</string>
    <string name="text_product_id">产品ID</string>
    <string name="text_device_name">设备名称</string>
    <string name="text_device_key">设备密钥</string>
    <string name="text_xp2p_info">xp2pInfo</string>
    <string name="text_device_info_tip">温馨提示：产品ID、设备名称、设备密钥在腾讯云物联网开发平台上创建设备获取</string>
    <string name="text_copy">复制</string>
    <string name="text_cloud_storage">上报云存事件</string>
    <string name="text_cloud_pic_ware">上报图片告警事件</string>
    <string name="text_cloud_video_ware">上报视频告警事件</string>
    <string name="text_custom_command">自定义信令</string>
    <string name="text_p2p_state">P2P状态：%s</string>
    <string name="text_cloud_storage_state">云存状态：%s</string>
    <string name="text_openid">微信用户openid</string>
    <string name="text_open_id">OpenId:</string>
    <string name="text_open_id_tip">请输入OpenId</string>
    <string name="text_state">当前状态：</string>
    <string name="text_ota_prepare">初始化中</string>
    <string name="text_ota_check">检查更新中</string>
    <string name="text_new_firmware">新固件：%s 大小：%d</string>
    <string name="text_download">下载中%s%</string>
    <string name="text_download_finish">下载完成%s%</string>
    <string name="text_send_command">发送信令</string>
    <string name="text_send">发送</string>
    <string name="title_log">Log</string>
    <string name="text_soft_encode">软编码</string>
    <string name="text_hard_encode">硬编码</string>
    <string name="text_active_code">测试激活码</string>
    <string name="text_room_ipc">家庭安防场景</string>
    <string name="text_wearable">可穿戴设备</string>
    
    <!-- 新增字符串用于优化布局 -->
    <string name="text_live_preview">实时预览</string>
    <string name="text_device_operations">设备操作</string>
    <string name="text_reporting_alarm">正在上报告警中...</string>
</resources>