<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_layout"
        layout="@layout/menu_back_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <TextView
            android:id="@+id/tv_quality_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/wx_setting"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:text="@string/quality_setting_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dashed_line" />

        <TextView
            android:id="@+id/text_voip_local_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/local_resolution"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_voip_local_resolution"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_voip_local_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/local_frame_rate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_voip_local_frame_rate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_voip_local_frame_rate_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/local_frame_rate_tip"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_voip_local_bit_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/local_bit_rate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_voip_local_bit_rate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_voip_local_frame_bit_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/local_bit_rate_tip"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_voip_wx_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/wx_resolution"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_voip_wx_resolution"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_voip_wx_camera_is_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/wx_camera_setting"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_voip_wx_camera_is_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_blue_cell_btn"
            android:text="@string/conform"
            android:textColor="@color/blue_0052D9"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>