<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/iot_video_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo" />

    <Button
        android:id="@+id/btn_login_IPC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/title_ipc"
        android:textColor="@color/blue_0052D9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <Button
        android:id="@+id/btn_login_duplex_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/title_audio_video_call"
        android:textColor="@color/blue_0052D9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_IPC" />

    <Button
        android:id="@+id/btn_login_voip"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/title_voip"
        android:textColor="@color/blue_0052D9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_duplex_video" />

    <Button
        android:id="@+id/btn_setting_device"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/title_setting_device"
        android:textColor="@color/blue_0052D9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_voip" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/tip_text"
        android:textColor="@color/white_0052D9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_device" />

</androidx.constraintlayout.widget.ConstraintLayout>