<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_layout"
        layout="@layout/menu_back_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

        <TextView
            android:id="@+id/tv_wx_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/wx_setting"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:text="@string/wx_setting_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dashed_line" />

        <TextView
            android:id="@+id/text_voip_wx_app_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/wx_app_id"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_voip_wx_app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/wx_app_id"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_voip_model_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/model_id"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_voip_model_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/model_id"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_voip_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/sn"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_voip_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/sn"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_voip_sn_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/sn_ticket"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_voip_sn_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/sn_ticket"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_blue_cell_btn"
            android:text="@string/conform"
            android:textColor="@color/blue_0052D9"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>