<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/device_setting_dialog_layout"
    android:background="@color/dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <EditText
                android:id="@+id/et_json_copy"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="textMultiLine"
                android:lines="6"
                android:hint="@string/voip_setting_json_input"
                android:gravity="top"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/et_login_product_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/product_id"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_login_device_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/device_name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_login_device_key"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/device_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="80dp"
                android:text="@string/conform"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>